Add player average age to view

--- a/app/views/competitions/show.html.erb
+++ b/app/views/competitions/show.html.erb
@@ -2,6 +2,7 @@
 <%= @competition.name %>
 <%= @competition.location %>
 <%= @competition.sport %>
+<%= @competition.average_player_age %>
 
 <% @competition.teams.each do |team| %>
   <%= team.nickname %>
